force-app/main/default/objects/Retail_Instant_lending_Manual__c/Retail_Instant_lending_Manual__c.object-meta.xml
<CustomObject>
    <label>Retail Instant lending Manual</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Retail Instant lending Manual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Instant lending Manual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>