force-app/main/default/objects/Retail_Instant_lending_Manual__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retail Instant lending Manual</relationshipLabel>
    <relationshipName>Retail_Instant_lending_Manual</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>