force-app/main/default/objects/Retail_Instant_lending_Manual__c/fields/Lending_Privileges_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lending_Privileges_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lending Privileges Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>