force-app/main/default/objects/Retail_Instant_lending_Manual__c/fields/Promotion_Condition_Detail__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Condition_Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotion/Condition Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>